# rustgpt

./: .gitignore  Cargo.toml  README.md  architecture.md  improvement-plan.md
data/: chat_multiturn_research.jsonl  chat_tiny.txt  names_demo.txt  stories_tiny.txt
data/open/: README.md
data/open/smoltalk-everyday/: test.parquet  train.parquet
evals/: README.md  assistant_termination_chatml.jsonl  assistant_termination_simple.jsonl
src/: lib.rs  main.rs
src/app/: mod.rs
src/app/cli/: help.rs  mod.rs  parse_chat.rs  parse_eval.rs  parse_gpu_info.rs  parse_inspect_vocab.rs  parse_prepare_data.rs  parse_sample.rs  parse_shared.rs  parse_train.rs  parse_train_tokenizer.rs  tests.rs
src/app/commands/: bench.rs  chat.rs  eval.rs  gpu_info.rs  mod.rs  prepare_data.rs  sample.rs  train.rs  train_tokenizer.rs
src/core/: config.rs  error.rs  mod.rs  presets.rs  rng.rs  tensor.rs
src/data/: checkpoint.rs  corpus.rs  eval_suite.rs  mod.rs  prepare.rs  schema.rs  tokenizer.rs  training_data.rs
src/data/tokenizer/: byte.rs  hf.rs  mod.rs  training.rs
src/engine/: chat.rs  checkpoint.rs  device.rs  generate.rs  mod.rs  model.rs  profile.rs  train.rs
src/infer/: chat.rs  mod.rs  sample.rs
src/model/: attention.rs  lm.rs  mod.rs  position.rs
src/runtime/: backward.rs  chat.rs  checkpoint.rs  device.rs  eval.rs  forward.rs  mod.rs  profile.rs  sampling.rs  train_cache.rs  training.rs  workspace.rs
src/runtime/backend/: mod.rs
src/runtime/backend/gpu/: api.rs  inference.rs  mod.rs  shaders.rs  storage.rs  tests.rs  training.rs  (+1 more)
src/train/: mod.rs  training.rs
